<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/projectDetailTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/projectDetailTableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/projectDetailCustomerLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:labelFor="@+id/projectDetailCustomerText"
                android:text="@string/project_detail_customer_label" />

            <TextView
                android:id="@+id/projectDetailCustomerLabel2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="x" />
        </TableRow>

        <TableRow
            android:id="@+id/projectDetailTableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/projectDetailCustomerText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:inputType="text"
                android:text="@string/project_detail_customer_text" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/projectDetailCustomerColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                 android:text="yyyyyyyy" />
        </TableRow>
                <TableRow
            android:id="@+id/projectDetailTableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

		    <TextView
		        android:id="@+id/projectDetailProjectLabel"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.6"
		        android:labelFor="@+id/projectDetailProjectText"
		        android:text="@string/project_detail_project_label" />
		
		    <TextView
		        android:id="@+id/projectDetailProjectLabel2"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.4"
		        android:text="x" />
        </TableRow>

        <TableRow
            android:id="@+id/projectDetailTableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

		    <EditText
		        android:id="@+id/projectDetailProjectText"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.6"
		        android:inputType="text"
		        android:text="@string/project_detail_project_text" >
		
		    </EditText>
		    
  		    <TextView
		        android:id="@+id/projectDetailProjectColor"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.4"
			    android:text="yyyyyyyy" />
		
		    </TableRow>
        
    </TableLayout>

</LinearLayout>